# AttendanceCompanyServices

./: .dockerignore  .env.example  .gitignore  README.md  app.py  constants.py  docker-compose.yaml  dockerfile  logging_config.py  pyproject.toml  setup.py
config/: firestore.py
docs/: CNAME  deepface.html  openapi.json
logging_configs/: logging.json
nodes/: firestore_client.py
utils/: exceptions.py
