[project]
name = "deepfaceabsensi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "deepface>=0.0.95",
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-cors>=5.0.0",
    "gunicorn>=21.2.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.9.0",
    "pydantic>=2.11.9",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
